Edited href for headshot.jpg to appear correctly

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<h1>Welcome to Tico's Free Code Camp Portfolio Page!</h1>
 				</div>
 				<div>
-					<img src="/images/headshot.jpg" alt="Image of author with a smile on his face.">
+					<img src="images/headshot.jpg" alt="Image of author with a smile on his face.">
 					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
 				</div>
 			</section>
