Changed id of first <section> element to 'welcome-section' to fulfull user story #1

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 	<head>
 		<title>Tico's FCC Portfolio</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link href="main.css" rel="stylesheet" type="text/css" /> 
 	</head>
 	<body>
 		<header>
 			<nav>
 				<ul>
-					<a href="#">Home</a>
+					<a href="#welcome-section">Home</a>
 					<a href="#">About Me</a>
 					<a href="#">Latest Work</a>
 					<a href="#">Contact Me</a>
@@ -17,7 +18,7 @@
 		</header>
 		
 		<main>
-			<section id="Home">
+			<section id="welcome-section">
 				<div>
 					<h1>Welcome to Tico's Free Code Camp Portfolio Page!</h1>
 				</div>
