Added new images of project screenshots for 'projects' <section>

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 		<link href="main.css" rel="stylesheet" type="text/css" /> 
 	</head>
 	<body>
-		<header>
-			<nav>
+		<header id="header">
+			<nav id="nav-bar">
 				<ul>
 					<a href="#welcome-section">Home</a>
-					<a href="#">About Me</a>
-					<a href="#">Latest Work</a>
-					<a href="#">Contact Me</a>
+					<a href="#about-me">About Me</a>
+					<a href="#projects">Latest Work</a>
+					<a href="#contact-me">Contact Me</a>
 				</ul>
 			</nav>
 		</header>
@@ -27,7 +27,7 @@
 					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
 				</div>
 			</section>
-			<section id="About-Me">
+			<section id="about-me">
 				<div>
 					<h2>How did I get started?</h2>
 				</div>
@@ -36,16 +36,37 @@
 					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
 				</div>
 			</section>
-			<section id="Latest-Work">
+			<section id="projects">
 				<div>
 					<h2>What Have I Completed Lately?</h2>
 				</div>
-				<div>
-					<img src="#" alt="">
+				<div class="project-tile">
+					<a href="https://ticotheps.github.io/fcc-tribute-page/"><img src="./images/tribute.jpg" alt="Tico's FCC Tribute Page"></a>
+					<h3>Tico's FCC Tribute Page</h3>
+					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
+				</div>
+				<div class="project-tile">
+					<a href="https://ticotheps.github.io/fcc-survey-form/"><img src="./images/survey.jpg" alt="Tico's FCC Survey Form"></a>
+					<h3>Tico's FCC Survey Form</h3>
+					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
+				</div>
+				<div class="project-tile">
+					<a href="https://ticotheps.github.io/fcc-landing-page/"><img src="./images/landing.jpg" alt="Tico's FCC Landing Page"></a>
+					<h3>Tico's FCC Landing Page</h3>
+					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
+				</div>
+				<div class="project-tile">
+					<a href="https://ticotheps.github.io/fcc-technical-doc-page/"><img src="./images/technical.jpg" alt="Tico's FCC Technical Documentation Page"></a>
+					<h3>Tico's FCC Technical Documentation Page</h3>
+					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
+				</div>
+				<div class="project-tile">
+					<a href="https://ticotheps.github.io/bitcoin-quiz/"><img src="./images/quiz.jpg" alt="Tico's Bitcoin Quiz"></a>
+					<h3>Tico's Bitcoin Quiz</h3>
 					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
 				</div>
 			</section>
-			<section id="Contact-Me">
+			<section id="contact-me">
 				<div>
 					<h2>How Can You Contact Me?</h2>
 				</div>
@@ -68,6 +89,7 @@
 				<p>Copyright Tico Thepsourinthone 2019</p>
 			</div>
 		</footer>
+		<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 	</body>
 </html>
 
