Styled page using flex-box and resized images

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 			</nav>
 		</header>
 		
-		<main>
+		<main id="main-content">
 			<section id="welcome-section">
 				<div>
 					<h1>Welcome to Tico's Free Code Camp Portfolio Page!</h1>
 				</div>
 				<div>
-					<img src="images/headshot.jpg" alt="Image of author with a smile on his face.">
+					<img src="images/headshot.jpg" alt="Image of author with a smile on his face." class="headshot-image">
 					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
 				</div>
 			</section>
@@ -41,27 +41,27 @@
 					<h2>What Have I Completed Lately?</h2>
 				</div>
 				<div class="project-tile">
-					<a href="https://ticotheps.github.io/fcc-tribute-page/"><img src="./images/tribute.jpg" alt="Tico's FCC Tribute Page"></a>
+					<a href="https://ticotheps.github.io/fcc-tribute-page/"><img src="./images/tribute.jpg" alt="Tico's FCC Tribute Page" class="project-image" /></a>
 					<h3>Tico's FCC Tribute Page</h3>
 					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
 				</div>
 				<div class="project-tile">
-					<a href="https://ticotheps.github.io/fcc-survey-form/"><img src="./images/survey.jpg" alt="Tico's FCC Survey Form"></a>
+					<a href="https://ticotheps.github.io/fcc-survey-form/"><img src="./images/survey.jpg" alt="Tico's FCC Survey Form" class="project-image" /></a>
 					<h3>Tico's FCC Survey Form</h3>
 					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
 				</div>
 				<div class="project-tile">
-					<a href="https://ticotheps.github.io/fcc-landing-page/"><img src="./images/landing.jpg" alt="Tico's FCC Landing Page"></a>
+					<a href="https://ticotheps.github.io/fcc-landing-page/"><img src="./images/landing.jpg" alt="Tico's FCC Landing Page" class="project-image" /></a>
 					<h3>Tico's FCC Landing Page</h3>
 					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
 				</div>
 				<div class="project-tile">
-					<a href="https://ticotheps.github.io/fcc-technical-doc-page/"><img src="./images/technical.jpg" alt="Tico's FCC Technical Documentation Page"></a>
+					<a href="https://ticotheps.github.io/fcc-technical-doc-page/"><img src="./images/technical.jpg" alt="Tico's FCC Technical Documentation Page" class="project-image" /></a>
 					<h3>Tico's FCC Technical Documentation Page</h3>
 					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
 				</div>
 				<div class="project-tile">
-					<a href="https://ticotheps.github.io/bitcoin-quiz/"><img src="./images/quiz.jpg" alt="Tico's Bitcoin Quiz"></a>
+					<a href="https://ticotheps.github.io/bitcoin-quiz/"><img src="./images/quiz.jpg" alt="Tico's Bitcoin Quiz" class="project-image" /></a>
 					<h3>Tico's Bitcoin Quiz</h3>
 					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
 				</div>
@@ -77,7 +77,7 @@
 			</section>
 		</main>
 		
-		<footer>
+		<footer id="footer">
 			<div>
 				<ul>
 					<li>Twitter</li>
