Added font awesome icons inside of <footer> with wrapping <a> tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Tico's FCC Portfolio</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 		<link href="main.css" rel="stylesheet" type="text/css" /> 
 	</head>
 	<body>
@@ -12,7 +13,7 @@
 					<a href="#welcome-section">Home</a>
 					<a href="#about-me">About Me</a>
 					<a href="#projects">Latest Work</a>
-					<a href="#contact-me">Contact Me</a>
+					<a href="#footer">Contact Me</a>
 				</ul>
 			</nav>
 		</header>
@@ -24,7 +25,7 @@
 				</div>
 				<div>
 					<img src="images/headshot.jpg" alt="Image of author with a smile on his face." class="headshot-image">
-					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
+					<p>Tico S. Thepsourinthone: Full-Stack Web Developer</p>
 				</div>
 			</section>
 			<section id="about-me">
@@ -66,27 +67,17 @@
 					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
 				</div>
 			</section>
-			<section id="contact-me">
-				<div>
-					<h2>How Can You Contact Me?</h2>
-				</div>
-				<div>
-					<img src="#" alt="">
-					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
-				</div>
-			</section>
 		</main>
 		
 		<footer id="footer">
 			<div>
 				<ul>
-					<li>Twitter</li>
-					<li>LinkedIn</li>
-					<li>Email</li>
+					<a id="profile-link" href="https://github.com/ticotheps" target="_blank"><i class="fab fa-github" style="font-size: 2.5rem;"></i></a>
+					<a href="https://twitter.com/ticotheps" target="_blank"><i class="fab fa-twitter" style="font-size: 2.5rem;"></i></a>
+					<a href="https://www.linkedin.com/in/ticotheps/" target="_blank"><i class="fab fa-linkedin-in" style="font-size: 2.5rem;"></i></a>
 				</ul>
 			</div>
-			<div>
-				<p>Copyright Tico Thepsourinthone 2019</p>
+			<div>&copy; Tico Thepsourinthone 2019</p>
 			</div>
 		</footer>
 		<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
