Styled <body>, <nav>, <section>, <main>, and <footer>

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
 		
 		<footer id="footer">
 			<div>
-				<ul>
-					<a id="profile-link" href="https://github.com/ticotheps" target="_blank"><i class="fab fa-github" style="font-size: 2.5rem;"></i></a>
-					<a href="https://twitter.com/ticotheps" target="_blank"><i class="fab fa-twitter" style="font-size: 2.5rem;"></i></a>
-					<a href="https://www.linkedin.com/in/ticotheps/" target="_blank"><i class="fab fa-linkedin-in" style="font-size: 2.5rem;"></i></a>
+				<ul class="footer-ul">
+					<a id="profile-link" href="https://github.com/ticotheps" target="_blank"><i class="fab fa-github"></i></a>
+					<a href="https://twitter.com/ticotheps" target="_blank"><i class="fab fa-twitter"></i></a>
+					<a href="https://www.linkedin.com/in/ticotheps/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
 				</ul>
 			</div>
 			<div>&copy; Tico Thepsourinthone 2019</p>
