Styled fonts and different <section> elements on page

--- a/index.html
+++ b/index.html
@@ -20,50 +20,52 @@
 		
 		<main id="main-content">
 			<section id="welcome-section">
-				<div>
-					<h1>Welcome to Tico's Free Code Camp Portfolio Page!</h1>
+				<div class="welcome-top-container">
+					<h1>Welcome to <br/> Tico's Free Code Camp <br/> Portfolio Page!</h1>
 				</div>
-				<div>
+				<div class="welcome-bottom-container">
 					<img src="images/headshot.jpg" alt="Image of author with a smile on his face." class="headshot-image">
-					<p>Tico S. Thepsourinthone: Full-Stack Web Developer</p>
+					<div class="welcome-bottom-text-container">
+						<h2>Tico S. Thepsourinthone</h2>
+						<h3>Full-Stack Web Developer</h3>
+					</div>
+					
 				</div>
 			</section>
 			<section id="about-me">
-				<div>
-					<h2>How did I get started?</h2>
+				<div class="about-me-top-container">
+					<h3>How did I get started?</h3>
 				</div>
-				<div>
+				<div class="about-me-bottom-container">
 					<img src="#" alt="">
 					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
 				</div>
 			</section>
 			<section id="projects">
-				<div>
-					<h2>What Have I Completed Lately?</h2>
-				</div>
+				<h3>What Have I Completed Lately?</h3>
 				<div class="project-tile">
 					<a href="https://ticotheps.github.io/fcc-tribute-page/"><img src="./images/tribute.jpg" alt="Tico's FCC Tribute Page" class="project-image" /></a>
-					<h3>Tico's FCC Tribute Page</h3>
+					<h4>Tico's FCC Tribute Page</h4>
 					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
 				</div>
 				<div class="project-tile">
 					<a href="https://ticotheps.github.io/fcc-survey-form/"><img src="./images/survey.jpg" alt="Tico's FCC Survey Form" class="project-image" /></a>
-					<h3>Tico's FCC Survey Form</h3>
+					<h4>Tico's FCC Survey Form</h4>
 					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
 				</div>
 				<div class="project-tile">
 					<a href="https://ticotheps.github.io/fcc-landing-page/"><img src="./images/landing.jpg" alt="Tico's FCC Landing Page" class="project-image" /></a>
-					<h3>Tico's FCC Landing Page</h3>
+					<h4>Tico's FCC Landing Page</h4>
 					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
 				</div>
 				<div class="project-tile">
 					<a href="https://ticotheps.github.io/fcc-technical-doc-page/"><img src="./images/technical.jpg" alt="Tico's FCC Technical Documentation Page" class="project-image" /></a>
-					<h3>Tico's FCC Technical Documentation Page</h3>
+					<h4>Tico's FCC Technical Documentation Page</h4>
 					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
 				</div>
 				<div class="project-tile">
 					<a href="https://ticotheps.github.io/bitcoin-quiz/"><img src="./images/quiz.jpg" alt="Tico's Bitcoin Quiz" class="project-image" /></a>
-					<h3>Tico's Bitcoin Quiz</h3>
+					<h4>Tico's Bitcoin Quiz</h4>
 					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
 				</div>
 			</section>
@@ -77,8 +79,7 @@
 					<a href="https://www.linkedin.com/in/ticotheps/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
 				</ul>
 			</div>
-			<div>&copy; Tico Thepsourinthone 2019</p>
-			</div>
+			<p>&copy; Tico Thepsourinthone 2019</p>
 		</footer>
 		<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 	</body>
