Styled navbar and created styles for @mobile width at 500px

--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
 	</head>
 	<body>
 		<header id="header">
-			<nav id="nav-bar">
-				<ul>
-					<a href="#welcome-section">Home</a>
-					<a href="#about-me">About Me</a>
-					<a href="#projects">Latest Work</a>
-					<a href="#footer">Contact Me</a>
-				</ul>
+			<nav id="navbar">
+				<a href="#welcome-section">Home</a>
+				<a href="#about-me">About Me</a>
+				<a href="#projects">Latest Work</a>
+				<a href="#footer">Contact Me</a>
 			</nav>
 		</header>
 		
