Styled headings and resized images

--- a/index.html
+++ b/index.html
@@ -36,35 +36,59 @@
 				</div>
 				<div class="about-me-bottom-container">
 					<img src="#" alt="">
-					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
+					<p>
+						Before programming, I worked as a physical therapist 
+						assistant (PTA). While working as a PTA in a 
+						long-term care facility, I knew that I had a 
+						knack for solving problems with the use of 
+						exercise prescription and therapy modalities. 
+						What I DIDN’T realize was how those problem-
+						solving skills would later leak into other 
+						areas of my workplace. One day, while I was 
+						treating a total-knee replacement patient in the 
+						clinic, I ran out to the front entrance of the 
+						building to reset the safety alarm because a 
+						visitor had tried to exit the building without 
+						entering the proper code. A few minutes later, 
+						I saw another therapist go out and help someone 
+						with the same issue. By the end of the day, I 
+						had used my basic knowledge of Microsoft Word 
+						and my love for great customer service to post 
+						geriatric-friendly, easy-to-follow signs that 
+						explained, step-by-step, how to enter and exit 
+						the building safely, without tripping the alarm. 
+						Visitors were happy because they didn’t get 
+						embarrassed from tripping the alarm, my co-workers 
+						rejoiced because they didn’t have to leave their 
+						patients to reset the alarm, and my boss rejoiced 
+						because I helped improve her team’s productivity 
+						numbers! And now I’m a student at Lambda School
+						and Free Code Camp, continuing my pursuit of 
+						learning to solve problems using technology!
+					</p>
 				</div>
 			</section>
 			<section id="projects">
-				<h3>What Have I Completed Lately?</h3>
+				<h3 class="projects-heading">What Have I Completed Lately?</h3>
 				<div class="project-tile">
 					<a href="https://ticotheps.github.io/fcc-tribute-page/"><img src="./images/tribute.jpg" alt="Tico's FCC Tribute Page" class="project-image" /></a>
-					<h4>Tico's FCC Tribute Page</h4>
-					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
+					<h4 class="project-title-heading">Tico's FCC Tribute Page</h4>
 				</div>
 				<div class="project-tile">
 					<a href="https://ticotheps.github.io/fcc-survey-form/"><img src="./images/survey.jpg" alt="Tico's FCC Survey Form" class="project-image" /></a>
-					<h4>Tico's FCC Survey Form</h4>
-					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
+					<h4 class="project-title-heading">Tico's FCC Survey Form</h4>
 				</div>
 				<div class="project-tile">
 					<a href="https://ticotheps.github.io/fcc-landing-page/"><img src="./images/landing.jpg" alt="Tico's FCC Landing Page" class="project-image" /></a>
-					<h4>Tico's FCC Landing Page</h4>
-					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
+					<h4 class="project-title-heading">Tico's FCC Landing Page</h4>
 				</div>
 				<div class="project-tile">
 					<a href="https://ticotheps.github.io/fcc-technical-doc-page/"><img src="./images/technical.jpg" alt="Tico's FCC Technical Documentation Page" class="project-image" /></a>
-					<h4>Tico's FCC Technical Documentation Page</h4>
-					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
+					<h4 class="project-title-heading">Tico's FCC Technical Documentation Page</h4>
 				</div>
 				<div class="project-tile">
 					<a href="https://ticotheps.github.io/bitcoin-quiz/"><img src="./images/quiz.jpg" alt="Tico's Bitcoin Quiz" class="project-image" /></a>
-					<h4>Tico's Bitcoin Quiz</h4>
-					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus error totam optio ea ab quod itaque dignissimos illum facilis vel.</p>
+					<h4 class="project-title-heading">Tico's Bitcoin Quiz</h4>
 				</div>
 			</section>
 		</main>
